Fix callout spacing

--- a/app/css/modal.styl
+++ b/app/css/modal.styl
@@ -1652,7 +1652,7 @@ $outline = #ddd;
   font-size: 13px;
   line-height: 20px;
   border-top: 1px solid #f3ebd3;
-  padding-left: 24px + 16px;
+  padding-left: 24px + 20px;
   color: #666;
 
   span {
